@@ -1,3 +1,6 @@
+  10 Apr 2020;  <chymera@gentoo.org> -pyvote-9999.ebuild, pyvote-0.1.ebuild:
+  dev-python/pyvote: dropped python2 support  And removed live ebuild
+
 *trimesh-3.3.5 (04 Nov 2019)
 
   04 Nov 2019;  <chymera@gentoo.org> +metadata.xml, +trimesh-3.3.5.ebuild:
